Change file name from home_page to index

--- a/basketball.html
+++ b/basketball.html
@@ -66,7 +66,7 @@
 
         <p>other than these there are many other things in basketball like: fouls, positions, techniques and etc.</p>
         <h3>Back to Home page</h3>
-    <a href="home_page.html">home page</a>
+    <a href="index.html">home page</a>
 </body>
 
 </html>
