--- a/cricket.html
+++ b/cricket.html
@@ -57,7 +57,7 @@
         version of the code was drafted in 1744 and, since 1788, it has been owned and maintained by its custodian, the
         Marylebone Cricket Club (MCC) in London</p>
         <h3>Back to Home page</h3>
-    <a href="home_page.html">home page</a>
+    <a href="index.html">home page</a>
 
         </body>
         </html>
