--- a/football.html
+++ b/football.html
@@ -55,7 +55,7 @@
         </ul>
     </ul>
     <h3>Back to Home page</h3>
-    <a href="home_page.html">home page</a>
+    <a href="index.html">home page</a>
 
 
 
