--- a/lawn_tennis.html
+++ b/lawn_tennis.html
@@ -54,7 +54,7 @@
         system would rate 3.0-4.5 while world class players would be 7.0 on this scale.
 
     </p>
-    <h3>Back to Home page</h3><a href="home_page.html">home page</a>
+    <h3>Back to Home page</h3><a href="index.html">home page</a>
     
     </body>
     </html>
